<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.floto</groupId>
    <artifactId>floto</artifactId>
    <version>2.0.0-SNAPSHOT</version>

    <description>DevOps orchestration for containers</description>
    <url>http://floto.github.io/</url>
    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>scm:git:https://github.com/floto/floto.git</url>
        <connection>scm:git:https://github.com/floto/floto.git</connection>
        <developerConnection>scm:git:git@github.com:floto/floto.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <id>mwoelker</id>
            <name>Manuel Woelker</name>
            <email>floto@manuel.woelker.org</email>
        </developer>
        <developer>
        	<id>michas</id>
        	<name>Michael Sorg</name>
        	<email>michas@jarmoni.org</email>
        </developer>
    </developers>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <slf4j.version>1.7.7</slf4j.version>
        <logback.version>1.1.2</logback.version>

        <aetherVersion>1.0.0.v20140518</aetherVersion>
        <mavenVersion>3.2.2</mavenVersion>
        <wagonVersion>1.0</wagonVersion>
        <jetty.version>9.2.1.v20140609</jetty.version>
        <jersey.version>2.11</jersey.version>

        <httpclient.version>4.3.5</httpclient.version>

        <jshint-plugin.version>1.3.0</jshint-plugin.version>
        <jshint.version>2.4.1</jshint.version>
        <mapdb.version>1.0.5</mapdb.version>
        <jackson.version>2.4.1</jackson.version>
    </properties>

    <packaging>pom</packaging>

    <modules>
        <module>util</module>
        <module>core</module>
        <module>dsl</module>
		<module>ui</module>
        <module>server</module>
        <module>builder</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jul-to-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.freemarker</groupId>
                <artifactId>freemarker</artifactId>
                <version>2.3.20</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.11</version>
            </dependency>
            <dependency>
                <groupId>com.beust</groupId>
                <artifactId>jcommander</artifactId>
                <version>1.35</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${httpclient.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient-cache</artifactId>
                <version>${httpclient.version}</version>
            </dependency>


        </dependencies>
    </dependencyManagement>


</project>
